--- a/src/index.css
+++ b/src/index.css
@@ -74,10 +74,11 @@ ul.header li a:hover {
   margin-top: 40px; 
 }
 .map-container {
-  padding: 20px; 
+  padding: 0px; 
   display: block; 
-  width: 400px; 
+  width: 450px; 
   height: 300px; 
   margin: auto;   
+  border: 1px solid black; 
 }
 
