--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ h2, p, ul, li {
 }
 ul.header li {
   font-family: 'Bungee Inline', sans-serif; 
-  font-size: 1.5em; 
+  font-size: 1.3em; 
   display: inline; 
   list-style-type: none; 
   margin: 0; 
@@ -56,10 +56,13 @@ ul.header li a:hover {
 }
 .top {
   margin-top: 50px; 
-  margin-bottom: 50px; 
 }
-.top h1 {
+.top a {
+  font-family: 'Bungee Shade', sans-serif; 
+  color: black; 
+  text-decoration: none; 
   font-size: 4em; 
+  margin-bottom: 20px; 
 }
 .page {
   width: 95%; 
@@ -73,12 +76,8 @@ ul.header li a:hover {
 .footer {
   margin-top: 40px; 
 }
-.map-container {
-  padding: 0px; 
-  display: block; 
-  width: 450px; 
-  height: 300px; 
-  margin: auto;   
+.map {
+  margin: auto; 
   border: 1px solid black; 
 }
 
