--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ ul.header li a:hover {
 }
 .page {
   width: 95%; 
+  height: 450px;  
   margin: auto; 
   text-align: center; 
   padding-top: 0px; 
