--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@ ul.header li a:hover {
   margin: auto; 
   text-align: center; 
   padding-top: 0px; 
+  padding-bottom: 20px; 
 }
 .underline {
   text-decoration: underline; 
@@ -86,10 +87,16 @@ ul.header li a:hover {
 }
 .center-text {
   color: white; 
-  font-family: "Bungee Shade", sans-serif; 
-  font-size: 4em; 
+  -webkit-text-stroke: 1px black; 
+  font-family: "Bungee", sans-serif; 
+  font-size: 4.5em; 
   position: absolute; 
   top: 50%; 
   left: 50%; 
   transform: translate(-50%, -50%); 
+  white-space: nowrap; 
+
+}
+.delivery {
+  font-size: 6em;  
 }
