--- a/src/index.css
+++ b/src/index.css
@@ -1,102 +1,104 @@
 body {
-  margin: 0;
-}
+  margin: 0; }
+
 h1 {
-  font-family: 'Bungee Shade', sans-serif; 
-}
+  font-family: 'Bungee Shade', sans-serif; }
+
 h2, p, ul, li {
-  font-family: 'Bungee Hairline', sans-serif; 
-  font-weight: bold; 
-}
+  font-family: 'Bungee Hairline', sans-serif;
+  font-weight: bold; }
+
 ul.header li {
-  font-family: 'Bungee Inline', sans-serif; 
-  font-size: 1.3em; 
-  display: inline; 
-  list-style-type: none; 
-  margin: 0; 
-}
+  font-family: 'Bungee Inline', sans-serif;
+  font-size: 1.3em;
+  display: inline;
+  list-style-type: none;
+  margin: 0; }
+
 ul.header {
-  padding: 0; 
-  text-align: center; 
-}
+  padding: 0;
+  text-align: center; }
+
 ul.header li a {
-  text-decoration: none; 
-  padding: 20px; 
-  display: inline-block; 
+  text-decoration: none;
+  padding: 20px;
+  display: inline-block;
   transition: color 0.4s ease 0s;
-    transition-property: color;
-    transition-duration: 0.4s;
-    transition-timing-function: ease;
-    transition-delay: 0s; 
-}
+  transition-property: color;
+  transition-duration: 0.4s;
+  transition-timing-function: ease;
+  transition-delay: 0s; }
+
 a {
-  color: #FF00BB; 
-}
+  color: #FF00BB; }
+
 ul.header li a:hover {
-  color: #F1CC01; 
-}
+  color: #F1CC01; }
+
 .active {
-  color: #F1CC01; 
-}
+  color: #F1CC01; }
+
 .content {
-  background-color: #FFF;
-}
+  background-color: #FFF; }
+
 .content h2 {
   padding: 0;
-  margin: 0;
-}
-.content li {
-  margin-bottom: 10px;
-}
-.centered {
-  margin: auto; 
-  width: 99%; 
-  text-align: center; 
-}
-.top {
-  margin-top: 50px; 
-}
-.top a {
-  font-family: 'Bungee Shade', sans-serif; 
-  color: black; 
-  text-decoration: none; 
-  font-size: 4em; 
-  margin-bottom: 20px; 
-}
-.page {
-  width: 100%; 
-  min-width: 950px;  
-  min-height: 450px;  
-  margin: auto; 
-  text-align: center; 
-  padding-top: 0px; 
-  padding-bottom: 20px; 
-}
-.underline {
-  text-decoration: underline; 
-}
-.footer {
-  margin-top: 40px; 
-}
-.map {
-  margin: auto; 
-  border: 1px solid black; 
-}
-.container {
-  position: relative; 
-}
-.center-text {
-  color: white; 
-  -webkit-text-stroke: 1px black; 
-  font-family: "Bungee", sans-serif; 
-  font-size: 4.5em; 
-  position: absolute; 
-  top: 50%; 
-  left: 50%; 
-  transform: translate(-50%, -50%); 
-  white-space: nowrap; 
+  margin: 0; }
 
-}
+.content li {
+  margin-bottom: 10px; }
+
+.centered {
+  margin: auto;
+  width: 99%;
+  text-align: center; }
+
+.logo-section {
+  margin-top: 50px; }
+
+.logo-section a {
+  font-family: 'Bungee Shade', sans-serif;
+  color: black;
+  text-decoration: none;
+  font-size: 4em;
+  margin-bottom: 20px; }
+
+.page {
+  margin: auto;
+  text-align: center;
+  padding-top: 0px;
+  padding-bottom: 20px; 
+  overflow: wrap; }
+
+@media (min-width: 955) {
+  .page {
+    min-width: 950px;
+    min-height: 450px; }}
+
+.underline {
+  text-decoration: underline; }
+
+.footer {
+  margin-top: 40px; }
+
+.map {
+  margin: auto;
+  border: 1px solid black; }
+
+.container {
+  position: relative; }
+
+.center-text {
+  width: 100%; 
+  color: white;
+  -webkit-text-stroke: 1px black;
+  font-family: "Bungee", sans-serif;
+  font-size: 4.5em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  white-space: nowrap; } 
+
 .large-content-text {
-  font-size: 6em;  
-}
+  font-size: 6em; }
